# Asset-Tracking-System

./: .env.example  .gitignore  BACKEND_HANDOFF.md  ENDPOINTS_REPORT.md  README.md  demo.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 07b4faf61c19_init_tables.py  1094ad837d1f_init_tables.py  1473dd2a501f_init_tables.py  23e6857d9f70_initial_tables.py  2eaee3f58f27_init_tables.py  332a96baaa76_init_tables.py  385b670228dc_init_tables.py  42bdac4da18d_fix_booking_model.py  473d5a34f88d_add_departments_table_and_dep_id_to_.py  5992e8148558_add_asset_and_category_tables.py  5e17fb91a8b3_final_edit.py  653ab7420637_init_tables.py  6ae268f2847f_auth_module_user_and_refresh_token_.py  76a78b741de0_init_tables.py  78d478478e89_init_tables.py  7e5d078eb84a_init_tables.py  8e0937f9db69_auth_module_user_and_refresh_token_.py  94a7e0a53d0a_add_rental_plans_table.py  975d37ba1d72_init_tables.py  a18507cdf28c_add_payments_table.py  a1b2c3d4e5f6_add_dry_cleaning_requests.py  a1e9d4c2b7f0_add_image_url_to_assets.py  a39c4a0e973c_add_alocation.py  add_return_requested_status.py  af96a38e479f_add_payments_table.py  bdd967a6cb5c_init_tables.py  c1d2e3f4a5b6_add_rent_paid_booking_status.py  c56d5213a274_add_alocation.py  c64531ff5c64_init_tables.py  (+11 more)
app/: main.py
app/core/: config.py  (+5 more)
frontend/: admin.html  app.js  auth.html  explore.html  index.html  session.html  style.css
frontend-app/: .env.example  .gitignore  README.md  UI_ENHANCEMENTS_SUMMARY.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
scripts/: test_logger.py
(+97 files in other folders)
